@@ -133,7 +133,7 @@
         "img": "redvsblue.jpg"
     },
     "Five Nights at Freddy's": {
-        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/fnaf/fnaf/fnaf.xml",
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/fnaf/fnaf/fivenights.xml",
         "img": "fnaf.jpg"
     },
     "Five Nights at Freddy's 2": {
